# tdtp-impl

./: .gitignore  Cargo.toml  Costs.numbers  Inhaltsverzeichnis.rtf  Laborbuch.md
dataprocessor/: Cargo.toml
dataprocessor/src/: i2b.rs  main.rs  max_quantile.rs  sigtest.rs
datenverarbeitung/: I2B.cpp  I2B.h  client.cxx  client_build.sh  copy_artifacts.sh  gpio_test.cxx  main  main.cpp  plotten.py  server_build.sh
datenverarbeitung/client/: I2B.cpp  bins.csv  makefile
datenverarbeitung/client/src/: I2B.cpp
datenverarbeitung/examples/: gpio_test.cxx  gpio_test.py  test_client.cxx
datenverarbeitung/include/: libtdtp.h
datenverarbeitung/server/: makefile  server.cxx
datenverarbeitung/server/src/: server.cxx
datenverarbeitung/verarbeitungsfunktionen/src/: main.rs
esp32-server/: Cargo.toml
esp32-server/src/: lib.rs  pool.rs
esp32-server/src/client/: mod.rs
esp32-server/src/server/: data.rs  (+2 more)
src/: main.rs
tdtp/: Cargo.toml  bindings.h
tdtp-impl/: Cargo.toml  build.rs  tdtp_impl.h
tdtp-impl/examples/: client.rs  client_server.rs  server.rs
tdtp-impl/src/: client.rs  consts.rs  lib.rs
tdtp-impl/src/client/: mod.rs
tdtp-impl/src/server/: data.rs  mod.rs
tdtp/examples/: .gitignore  build_c.sh  client.cxx  client.rs  client_server.rs  server.cxx  server.rs
tdtp/src/: client.rs  consts.rs  lib.rs  server.rs
test-client/: Cargo.toml
test-client/src/: main.rs
verarbeitungsfunktionen/src/: max_quantile.rs  sigtest.rs
visualisierung/: Cargo.toml
visualisierung/plotters-egui/: Cargo.toml
visualisierung/src/: intervallvis.rs  main.rs
