[package]
name = "tdtp-impl"
version = "0.1.0"
edition = "2024"

[features]
client = []
server = []
full = ["client", "server"]
default = ["full"]
disable_log = ["log/release_max_level_off", "log/max_level_off"]

[dependencies]
log = "0.4.27"

[[example]]
name = "server"

[[example]]
name = "client_server"

[[example]]
name = "client"
