[package]
name = "tdtp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
client = []
server = []
interop = ["simplelog"]
full = ["client", "server", "interop"]
default = ["full"]
disable_log = ["log/release_max_level_off", "log/max_level_off"]

[dependencies]
log = "0.4.27"
simplelog = { version = "0.12.2", optional = true }

[[example]]
name = "server"

[[example]]
name = "client_server"

[[example]]
name = "client"

[build-dependencies]
cbindgen = "0.29.0"
